--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -1,70 +1,237 @@
 <!DOCTYPE html>
-<!-- ADAPTED FROM TEMPLATE at https://unpkg.com/-->
-
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CyberCell coin</title>
-    <link rel="shortcut icon" href="{{ url_for('static', filename = 'images/favicon.ico') }}">
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,400i|PT+Serif:700" rel="stylesheet">
-    <link rel="stylesheet" href="/static/dist/css/style.css">
-    <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CyberCell</title>
+    <link rel="stylesheet" href="../static/css/index.css">
+    <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
 </head>
-
-<body class="is-boxed has-animations" style="height: 100%;">
-    <div class="body-wrap boxed-container">
-        <header class="site-header">
-            <div class="container">
-                <div class="site-header-inner">
-                    <div class="brand header-brand">
-                        <h1 class="m-0">
-                            <a href="#">
-                                <img src="static/images/ccc.png" width="107.95" height="32" viewBox="0 0 32 32" style="float:left";>
-                                <defs>
-                                    <radialGradient cy="0%" fx="50%" fy="0%" r="100%" id="logo-gradient">
-                                        <stop stop-color="#FFF" offset="0%"></stop>
-                                        <stop stop-color="#FFF" stop-opacity=".24" offset="100%"></stop>
-                                    </radialGradient>
-                                </defs>
-                                <path d="M16 32C7.163 32 0 24.837 0 16S7.163 0 16 0s16 7.163 16 16-7.163 16-16 16zm0-10a6 6 0 1 0 0-12 6 6 0 0 0 0 12z" fill="url(#logo-gradient)" fill-rule="evenodd"></path>
-                            </a>
-                        </h1>
-                    </div>
-                    <ul class="header-links list-reset m-0">
-                        <li>
-                            <a href="/login">Login</a>
-                        </li>
-                        <li>
-                            <a class="button button-sm button-shadow" href="/register">Register</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </header>
-
-        <main>
-            <section class="hero text-light text-center">
-                <div class="container-sm">
-                    <div class="hero-inner">
-                        <h1 class="hero-title h2-mobile mt-0 is-revealing" style="visibility: visible;">CyberCell coin |CYC| Cryptocurrency</h1>
-                        <p class="hero-paragraph is-revealing" style="visibility: visible;">Cybercell is a degital asset designed to work as a medium of exchange that uses strong cryptography to secure financial transactions, control the creation of additional units, and verify the transfer of assets.</p>
-                        <p class="hero-cta is-revealing" style="visibility: visible;"><a class="button button-secondary button-shadow" href="/register">Get started now</a></p>
-
-                    </div>
-                </div>
-            </section>
-
-        </main>
-
-        <footer class="site-footer">
-            <div class="container">
-
-            </div>
-        </footer>
+<body>
+    <!--Navbar Section-->
+<nav class="navbar">
+    <div class="navbar__container">
+        <a href="#home" id="navbar__logo"> CyberCell</a>
+        <div class="navbar__toggle" id="mobile-menu">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
+        <ul class="navbar__menu">
+            <li class="navbar__item">
+                <a href="#home" class="navbar__links" id="home-page">Home</a>
+            </li>
+            <li class="navbar__item">
+                <a href="#about" class="navbar__links" id="about-page">About</a>
+            </li>
+           <li class="navbar__item">
+                <a href="#team" class="navbar__links" id="team-page">Team</a>
+            </li>
+            <li class="navbar__btn">
+                <a href="/register" class="button" id="signup">Sign Up</a>
+            </li>
+        </ul>
     </div>
-    <script src="/static/dist/js/main.min.js"></script>
+</nav>
+<!-- Hero Section-->
+<div class="hero" id="home">
+    <div class="twp-video-background">
+        <div class="twp-video-foreground">
+            <video autoplay muted loop id="myVideo">
+              <source src="../static/video/intro.mp4" type="video/mp4">
+            </video>
+        </div>
+      </div>
+    <div class="hero__container">
+            <h1 class="hero__heading">Trasactions Made Easy</h1>
+            <button class="main__btn"><a href="/register"> Register</a></button>
+    </div>
+</div>
+
+<!-- About Section -->
+<div class="main" id="about">
+    <div class="main__container">
+        <div class="main__img__container">
+            <div class="main__img-card">
+            <img src="../static/images/svg-2.svg" alt="">
+            </div>
+        </div>
+        <div class="main__content">
+            <h1>what do we do?</h1>
+            <h2>Cybercell is a degital asset designed to work as a medium of 
+                exchange that uses strong cryptography to secure financial transactions, 
+                control the creation of additional units, and verify the transfer of assets.</h2>
+            <button class="main__btn"><a href="/register">sign Up</a></button>
+        </div>
+    </div>
+</div>
+
+<!---team section--->
+    <section id="team">
+        <!--heading---->
+        <strong class="team-heading">Our Team</strong>
+        <!--team-container---------->
+        <div class="team-box-container">
+            <!--member-box-1--->
+            <div class="member-box member-1">
+                <!--img---->
+                <div class="member-img">
+                    <!--front-img-->
+                    <img src="../static/images/Abdou 1.jpg">
+                    <!--hover-img-->
+                    <img class="hover-img" src="../static/images/Abdou Front 2.jpg">
+                </div>
+                <!--text----->
+                <div class="member-name">
+                    <h3>Abderrahmen Hidoussi</h3>
+                    <h5>Co-founder | Blockchain Developper</h5>
+                </div>
+            </div>
+            <!--member-box-2--->
+            <div class="member-box member-2">
+                <!--img---->
+                <div class="member-img">
+                    <!--front-img-->
+                    <img src="../static/images/Aymen Front 1.jpg">
+                    <!--hover-img-->
+                    <img class="hover-img" src="../static/images/aymen Front 2.jpg">
+                </div>
+                <!--text----->
+                <div class="member-name">
+                    <h3>Aymen Haddeji</h3>
+                    <h5>Co-founder | Blockchain Developper</h5>
+                </div>
+            </div>
+            <!--member-box-3--->
+            <div class="member-box member-3">
+                <!--img---->
+                <div class="member-img">
+                    <!--front-img-->
+                    <img src="../static/images/Ons Front 1.jpg">
+                    <!--hover-img-->
+                    <img class="hover-img" src="../static/images/Ons Front 2.jpg">
+                </div>
+                <!--text----->
+                <div class="member-name">
+                    <h3>Ons Jannet</h3>
+                    <h5>Co-founder | Blockchain Developper</h5>
+                </div>
+            </div>
+            <!--detail-box-1----------------------------->
+            <div class="detail-box-1">
+                <div class="member-detail-box">
+                    <!--img---->
+                    <div class="detail-box-img">
+                        <img src="../static/images/AH.png">
+                    </div>
+                    <!--text-->
+                    <div class="detail-box-text">
+                        <!--cancel-btn---->
+                        <a href="javascript:void(0);" class="cancel">
+                            <i class="fas fa-times"></i>
+                        </a>
+                        <!--name-->
+                        <a href="#" class="detail-name">Abderrahmen Hidoussi</a>
+                        <!--social-links-->
+                        <div class="member-social-links">
+                            <!--facebook-->
+                            <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                            <!--instagram-->
+                            <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                        </div>
+                        <!--position---->
+                        <h5 class="position">Co-founder | Blockchain Developper</h5>
+                        <!--details--->
+                        <p>Created the consensus mechanism , implemented the endpoints and the RestFul API also collaborated in Blockchain dev.</p>
+                        <!--view-btn---->
+                        <a href="https://github.com/Abdou-Hidoussi" target="_blank" class="view-work-btn">View Work</a>
+                    </div>
+                </div>
+            </div>
+            <!--detail-box-2---------------------------->
+            <div class="detail-box-2">
+                <div class="member-detail-box">
+                    <!--img---->
+                    <div class="detail-box-img">
+                        <img src="../static/images/AYH.png">
+                    </div>
+                    <!--text-->
+                    <div class="detail-box-text">
+                        <!--cancel-btn---->
+                        <a href="javascript:void(0);" class="cancel">
+                            <i class="fas fa-times"></i>
+                        </a>
+                        <!--name-->
+                        <a href="#" class="detail-name">Aymen Haddeji</a>
+                        <!--social-links-->
+                        <div class="member-social-links">
+                            <!--facebook-->
+                            <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                            <!--instagram-->
+                            <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                        </div>
+                        <!--position---->
+                        <h5 class="position">Co-founder | Blockchain Developper</h5>
+                        <!--details--->
+                        <p>Designed the architecture of the Blockchain and implemented it's component and collaborated on the creation of the Web app.</p>
+                        <!--view-btn---->
+                        <a href="https://github.com/Aymen-haddaji-hub"  target="_blank" class="view-work-btn">View Work</a>
+                    </div>
+                </div>
+            </div>
+            <!--detail-box-3----------------------------->
+            <div class="detail-box-3">
+                <div class="member-detail-box">
+                    <!--img---->
+                    <div class="detail-box-img">
+                        <img src="../static/images/OJ.png">
+                    </div>
+                    <!--text-->
+                    <div class="detail-box-text">
+                        <!--cancel-btn---->
+                        <a href="javascript:void(0);" class="cancel">
+                            <i class="fas fa-times"></i>
+                        </a>
+                        <!--name-->
+                        <a href="#" class="detail-name">Ons Jannet</a>
+                        <!--social-links-->
+                        <div class="member-social-links">
+                            <!--facebook-->
+                            <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                            <!--instagram-->
+                            <a href="https://www.instagram.com/onssheckler/" target="_blank"><i class="fab fa-instagram"></i></a>
+                        </div>
+                        <!--position---->
+                        <h5 class="position">Co-founder | Blockchain Developper</h5>
+                        <!--details--->
+                        <p>Designed the GUI and Front-end Web app, Collaborated in the Back-end development by creating Transactions core.</p>
+                        <!--view-btn---->
+                        <a href="https://github.com/OnsJannet"  target="_blank" class="view-work-btn">View Work</a>
+                    </div>
+                </div>
+            </div>
+    </section>
+
+<!--Footer-->
+    <footer>
+        <div class="footer-content">
+            <h3>CyberCell Coin</h3>
+            <p>For more information here's our social media</p>
+            <ul class="socials">
+                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li>
+            </ul>
+        </div>
+        <div class="footer-bottom">
+            <p>copyright &copy;2021 CyberCell Coin.</p>
+        </div>
+    </footer>
+
+        <!--using JQuery--------------->
+<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+<script src="../static/js/index.js"></script>
 
 </body>
 </html>
